[tool.poetry]
name = "echobot"
version = "0.1.0"
description = ""
authors = ["Elnar Mengelbaev <elnar_men@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-tg-bot-framework = {git = "https://gitlab.levelupdev.ru/dvmn-open-source-dev-tools/django_tg_bot_framework.git"}
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
